# SmartCameraHeadController

./: CMakeLists.txt  camera_core.h  encoder_reader.cpp  main.cpp  motor_driver.cpp  pathfinder.cpp  pid_controller.cpp  test_pid.cpp
data/: sensor_log.csv
include/: camera_core.h  camera_visualizer.h
src/: camera_visualizer.cpp  encoder_reader.cpp  main.cpp  motor_driver.cpp  pathfinder.cpp  pid_controller.cpp
